[package]
name = "mgf-rust-parser"
version = "0.1.0"
edition = "2024"


[dependencies]
lancedb = "0.7.0"
arrow-array = "51.0.0"
arrow-schema = "51.0.0"
arrow = "51.0.0"          # for ArrowError and other public APIs
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
indicatif = "0.17"
rayon = "1.6"
crossbeam = "0.8"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "read_mgf"
path = "src/read_mgf.rs"

[[bin]]
name = "write_mgf"
path = "src/write_mgf.rs"