[package]
name = "mgf-rust-parser"
version = "0.1.0"
edition = "2024"


[dependencies]
lance = "0.10.10"
arrow-array = "51.0.0"
arrow-schema = "51.0.0"
arrow = "51.0.0"    
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
indicatif = "0.17"
rayon = "1.6"
crossbeam = "0.8"
clap = { version = "4", features = ["derive"] }


[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "read_mgf"
path = "src/read_mgf.rs"

